[package]
name = "dotnet-rng"
version = "1.0.1"
authors = ["BioTomateDE <latuskati+cratesio@gmail.com>", "Microsoft"]
edition = "2024"
rust-version = "1.85.1"
description = "Implementation of .NET's Random algorithm based on Knuth's subtractive method"
readme = "README.md"
repository = "https://github.com/BioTomateDE/DotnetRNG"
license = "MIT"
keywords = ["rng", "random", "dotnet", "knuth"]
categories = ["no-std::no-alloc", "algorithms", "mathematics", "embedded"]
